Fixed 'learn more' wrap in footer (reader) - #168 in sprint.ly

--- a/app/assets/stylesheets/mobile/_main_reader.sass
+++ b/app/assets/stylesheets/mobile/_main_reader.sass
@@ -444,8 +444,29 @@ div.close_tab
 #main footer
   padding: 5px 20px 5px
   margin: 0 auto
+  border-radius: 0
+  border:
+    left: 0
+    right: 0
+
+  .as_table,
+  .vcenter
+    display: inline
+
   a
     text-decoration: none
+  a.button
+    background: none
+    background-color: none
+    padding: 0
+    margin: 0 0 4px 0
+    border-radius: 0
+    border: none
+    box-shadow: none
+    float: none
+    line-height: normal
+    color: #0084c8
+    height: auto
 
 // `Main > Verses
 //----------------------------------------------------------------------------------------------------
